added project description

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "terminal-ai"
 version = "1.0.0"
+description = "terminal-ai is a command line tool that uses AI to generate terminal commands"
 dependencies = [
     "pyautogui",
     "langchain-openai",
