--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "pyautogui",
     "langchain-openai",
 ]
+long_description_content_type = "text/markdown"
 
 [project.scripts]
 ai = "terminal_ai.cli:main"
